[gd_scene load_steps=4 format=3 uid="uid://jcsxj1ldqj76"]

[ext_resource type="Script" path="res://FortuneTeller.gd" id="1_kexqb"]
[ext_resource type="SpriteFrames" uid="uid://cs5t3tfch2rma" path="res://resources/CrystalBall.tres" id="2_32s0q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xxj3i"]
radius = 26.0768

[node name="FortuneTeller" type="Node2D"]
script = ExtResource("1_kexqb")

[node name="CrystalBall" type="AnimatedSprite2D" parent="."]
position = Vector2(160, 100)
sprite_frames = ExtResource("2_32s0q")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(159, 95)
shape = SubResource("CircleShape2D_xxj3i")

[connection signal="animation_finished" from="CrystalBall" to="." method="_on_crystal_ball_animation_finished"]
[connection signal="input_event" from="Area2D" to="." method="_click_ball"]
